[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "glycoquant"
version = "0.3.0"
description = "라벨 글리칸(.raw) 자동 동정·정량 도구 (LC-ESI-HCD-MS/MS)"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "openpyxl>=3.1",
    "pyteomics>=4.6",
    "psims>=1.3",
    "lxml>=4.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pyinstaller>=6"]

[project.scripts]
glycoquant = "glycan_analyze:main"

[tool.setuptools]
py-modules = ["glycan_analyze", "setup_thermo"]

[tool.setuptools.packages.find]
include = ["glyco*"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning"]
addopts = "-q"
